# Drift

./: .claude-stop  .gitignore  CLAUDE.md  PHONE-TESTING.md  README.md  code-improvement.md  program.md  project.yml
.claude/: last-testflight-publish  mcp-config.json  settings.json
Calibrate/: CalibrateApp.swift  ContentView.swift
Calibrate.xcodeproj/: project.pbxproj
CalibrateTests/: UIFlowTests.swift
Docs/: ai-architecture-plan.md  ai-improvement-ideas.md  ai-parity.md  architecture.md  backlog.md  bug-queue.md  code-improvement-log.md  code-improvements.md  code-review-and-fix.md  decisions.md  deep-self-improvement-plan.md  develop.md  drift-control-design.md  failing-queries.md  future-ideas.md  human-reported-bugs.md  improvement-log.md  llm-eval-results.md  product-review-log.md  project-state.md  roadmap.md  session-log.md  sprint-plan.md  sprint.md  state.md  synthetic-queries.md  tenets.md  test.md  testing.md  tools.md  ui-improvements.md  use-cases.md
Drift/: BackupMonitor.swift  BackupScheduler.swift  BackupService.swift  ContentView.swift  Drift.entitlements  DriftApp.swift  Info.plist
Drift.xcodeproj/: project.pbxproj
DriftCore/: DEFINITION_OF_DONE.md  MIGRATION.md  Package.resolved  Package.swift
DriftLLMEvalMacOS/: AmbiguityEval.swift  (+14 more)
drift-mcp/: conftest.py  pyproject.toml
drift-mcp/drift_mcp/: __init__.py  runner.py  server.py
drift-mcp/drift_mcp/tools/: __init__.py  design.py  issues.py  reports.py  sprint.py  state.py  testflight.py  verify.py
drift-mcp/tests/: test_issues_done_when_parser.py  test_verify_verdict_parser.py
(+791 files in other folders)
